apps/syncthing/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  labels:
    app: syncthing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: syncthing
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      volumes:
        - name: config
          nfs:
            path: "/k8s-volumes/persistent/syncthing/config"
            server: 192.168.1.2
        - name: data
          nfs:
            path: "/k8s-volumes/persistent/syncthing/data"
            server: 192.168.1.2
      containers:
        - name: syncthing
          image: lscr.io/linuxserver/syncthing:1.21.0
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "8Gi"
              cpu: "4"
          imagePullPolicy: IfNotPresent
          readinessProbe:
            tcpSocket:
              port: 22000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 22000
            initialDelaySeconds: 10
            periodSeconds: 5
          ports:
            - containerPort: 8384
            - containerPort: 22000
            - containerPort: 21027
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: false
            - name: data
              mountPath: /data
              readOnly: false
