apps/syncthing/Services.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-tcp
  annotations:
    metallb.universe.tf/allow-shared-ip: "syncthing"
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.154
  selector:
    app: syncthing
  ports:
    - name: web
      protocol: TCP
      port: 8384
      targetPort: 8384
    - name: sync
      protocol: TCP
      port: 22000
      targetPort: 22000

---
apiVersion: v1
kind: Service
metadata:
  name: syncthing-udp
  annotations:
    metallb.universe.tf/allow-shared-ip: "syncthing"
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.154
  selector:
    app: syncthing
  ports:
    - name: sync
      protocol: UDP
      port: 22000
      targetPort: 22000
    - name: discovery
      protocol: UDP
      port: 21027
      targetPort: 21027
